hphp/test/zend/good/zend/access_modifiers_004.php.exp
HipHop Fatal error: Class test contains abstract method foo and must therefore be declared abstract in hphp/test/zend/good/zend/access_modifiers_004.php on line 4
